# sonos-athan

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: run.py
src/sonos_athan/: audio.py  config.py  main.py  scheduler.py  sonos.py
tests/: test_audio.py  test_config.py  test_exhaustive.py  test_scheduler.py  test_sonos.py  test_stability.py
