[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonos-athan"
version = "1.0.0"
description = "A 24/7 Sonos Athan player with automated scheduling and state restoration."
authors = [
    { name = "Aseef", email = "contact@aseef.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "soco>=0.31.0",
    "adhanpy>=1.0.5",
    "gTTS>=2.5.4",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sonos-athan = "sonos_athan.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sonos_athan*"]
